--- a/src/styles/pages/home.module.css
+++ b/src/styles/pages/home.module.css
@@ -2123,6 +2123,8 @@
   }
 
   .footerLeft {
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
   }
 
@@ -2189,11 +2191,19 @@
 
 @media (prefers-color-scheme: dark) {
   .githubLink {
-    color: #a1a1a1;
+    color: rgba(255, 255, 255, 0.9);
   }
 
   .githubLink:hover {
     color: #fff;
+  }
+
+  .footerText {
+    color: #a1a1a1;
+  }
+
+  .footerLink {
+    color: rgba(255, 255, 255, 0.85);
   }
 }
 
